# oop_midterm_project

./: .gitignore  CMakeLists.txt  Document.docx  install.bat
headers/: AboutScreen.h  Button.h  FundamentalFunction.h  GameScreen.h  GameState.h  Global.h  LoadGameMenu.h  MainMenu.h  NewGameMenu.h  ResourceManager.h  ReversiGame.h  SaveGame.h  SplashScreen.h  TextInput.h  Timer.h  VictoryScreen.h
midtermProject/: AI function  CMakeLists.txt  FundamentalFunction.cpp  main.cpp  main_v1.cpp
midtermProject/Chen_Alan/: Cpp Midtern Project.h  Global.h  main.cpp  main.h
src/: AboutScreen.cpp  Button.cpp  FundamentalFunction.cpp  GameScreen.cpp  GameState.cpp  Global.cpp  LoadGameMenu.cpp  MainMenu.cpp  NewGameMenu.cpp  ResourceManager.cpp  ReversiGame.cpp  SaveGame.cpp  SplashScreen.cpp  TextInput.cpp  Timer.cpp  VictoryScreen.cpp  main.cpp
